# paper-finder

./: .env.example  .gitignore  README.md  com.bioratio.paperfinder.sync.plist  install_relationship.sh  install_strip.sh  pyproject.toml  requirements.txt
docs/: LOCAL_AGENTS_KICKOFF.md  PAPER_FINDER_MEMORY_BANK.md  RUNBOOK.md
examples/: build_graph.py  chat.py  chat_web.py  check_service_account.py  com.bioratio.paperfinder.daily.plist  daily_run.py  diagnose_drive.py  drive_example.py  drive_sync.py  show_graph.py  synthesize.py
graph/: relationship.py
paperfinder/: __init__.py  api.py  cli.py  sampledata.py
paperfinder/core/: __init__.py  capture.py  finder.py  sectionstrip.py  vectorstore.py
paperfinder/graph/: __init__.py  relationship.py  stats.py  viz.py
paperfinder/studio/: __init__.py  chat.py  export.py  llm.py  studyset.py  synthesis.py
scripts/: paperfinder-status.sh
tests/: test_chat.py  test_chat_web.py  test_chunking.py  test_connections.py  test_drive_and_reconcile.py  test_export.py  test_filetypes.py  test_graph_chat.py  test_graphstats.py  test_qdrant_store.py  test_relationship.py  test_sectionchunks.py  test_sectionstrip.py  test_studio.py  test_tier_a.py  test_viz.py
