[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperfinder"
version = "0.1.0"
description = "Scoped semantic + keyword recall over your documents, with a human-verified relationship graph."
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "reportlab>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
office = ["python-docx>=1.1", "python-pptx>=0.6"]   # index .docx / .pptx
dev = ["httpx>=0.27"]                                # run the API smoke test in test_tier_a
st = ["sentence-transformers>=2.7"]          # PAPERFINDER_EMBEDDER=st
sqlitevec = ["sqlite-vec>=0.1.6"]            # PAPERFINDER_VECTOR_STORE=sqlite-vec
qdrant = ["qdrant-client>=1.9"]              # PAPERFINDER_VECTOR_STORE=qdrant
drive = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.0"]

[project.scripts]
paperfinder = "paperfinder.cli:_console"

[tool.setuptools.packages.find]
include = ["paperfinder*"]
